feat: add user roles feature (USER, VIP, ADMIN) and set Doanne/Phandeptrai as admins